<resources>
    <string name="app_name">Code Word</string>
    <string name="share_outcome_template_seed">%1$s\n%2$s\n%3$s</string>
    <string name="share_outcome_template_no_seed">%1$s\n%2$s</string>
    <string name="share_outcome_rounds">%3$s%1$s%4$s/%2$s</string>
    <string name="share_outcome_rounds_lost">L</string>
    <string name="share_outcome_rounds_loading">\?</string>
    <string name="share_outcome_rounds_hard_tag">*</string>
    <string name="share_outcome_rounds_hints_tag">+</string>
    <string name="share_outcome_etc">…</string>
    <string name="action_set_hinting">Hints</string>
    <string name="action_set_hinting_to_on">Turn Hints On</string>
    <string name="action_set_hinting_to_off">Turn Hints Off</string>
    <string name="action_puzzle_info">Puzzle Info</string>
    <string name="action_how_to_play">How to Play</string>
    <string name="action_new_puzzle">New Puzzle</string>
    <string name="action_start_puzzle">Start Puzzle</string>
    <string name="action_create">Create</string>
    <string name="action_play">Play</string>
    <string name="action_settings">Settings</string>
    <string name="action_app_info">About</string>
    <string name="action_credits">Credits</string>
    <string name="document_viewer_name">Viewer</string>
    <string name="document_viewer_send_email_chooser">Send email…</string>
    <string name="document_viewer_send_email_subject">Code Word</string>
    <string name="clip_seed_label">Code Word game seed</string>
    <string name="clip_seed_toast">Copied to clipboard</string>
    <string name="clip_outcome_label">Code Word game outcome</string>
    <string name="clip_outcome_toast">Copied to clipboard</string>
    <string name="key_label_enter">Enter</string>
    <string name="key_label_delete">Delete</string>
    <string name="game_error_word_length_zero">Enter a %1$s</string>
    <string name="game_error_word_length">%1$s not long enough</string>
    <string name="game_error_word_not_recognized">%1$s not recognized</string>
    <string name="game_error_word_not_valid">%1$s not valid</string>
    <string name="game_error_word_constraint_exact">Letter %3$d must be \'%2$s\'</string>
    <string name="game_error_word_constraint_included">%1$s must include \'%2$s\'</string>
    <string name="game_error_word_constraint_no">%1$s must not include \'%2$s\'</string>
    <string name="game_error_word_constraint_exact_no_letter">%1$s must include exact matches</string>
    <string name="game_error_word_constraint_included_no_letter">%1$s must have all included letters</string>
    <string name="game_error_word_constraint">%1$s must match previous clues</string>
    <string name="game_error_word_letter_repetitions">Too many \'%1$s\'s</string>
    <string name="game_error_word_letter_repetitions_no_letter">Too many letter repetitions</string>
    <string name="game_error_evaluation_inconsistent">Evaluation must be consistent with previous clues</string>
    <string name="game_error_hints_not_supported_daily">This Daily puzzle does not support hints</string>
    <string name="game_error_hints_not_supported">This puzzle does not support hints</string>
    <string name="game_error_hints_not_ready">Hints not ready</string>
    <string name="game_error_unknown">Something went wrong</string>
    <string name="game_message_hints_on">Hints On</string>
    <string name="game_message_hints_off">Hints Off</string>
    <string name="game_setup_title">New Puzzle</string>
    <string name="game_setup_tab_daily">Daily</string>
    <string name="game_setup_tab_seeded">Seeded</string>
    <string name="game_setup_tab_custom">Custom</string>
    <string name="game_setup_error_game_expired">This game has expired</string>
    <string name="game_setup_error_game_forthcoming">This game is forthcoming</string>
    <string name="game_setup_error_game_complete">This game is already complete</string>
    <string name="game_setup_error_feature_not_allowed">Not allowed</string>
    <string name="game_setup_error_feature_value_invalid_seed">Couldn\'t process Seed value; it may be invalid, or Code Word may need to be updated</string>
    <string name="game_setup_error_feature_value_invalid">Invalid value</string>
    <string name="game_setup_error_feature_value_not_allowed_seed">Seed value could not be used to start a game</string>
    <string name="game_setup_error_feature_value_not_allowed">Value not allowed</string>
    <string name="game_setup_error_unknown">Error</string>
    <string name="game_setup_launch_new">Start</string>
    <string name="game_setup_launch_resume">Resume</string>
    <string name="game_setup_launch_view">View</string>
    <string name="game_setup_seed_hint">Seed</string>
    <string name="game_setup_seed_prompt">Enter a Seed</string>
    <string name="game_setup_seed_prompt_detail">Use game seeds to share a puzzle with friends</string>
    <string name="game_setup_seed_cancel">Cancel</string>
    <string name="game_setup_seed_confirm">Enter</string>
    <string name="game_setup_daily_seed">Daily %1$s</string>
    <string name="game_setup_status_ongoing_daily">Resume the Daily Puzzle</string>
    <string name="game_setup_status_new_daily">Today\'s Puzzle: %1$d-letter %2$s; %3$s</string>
    <string name="game_setup_status_new_daily_no_letter_repetition">Today\'s Puzzle: %1$d-letter %2$s; %3$s. No repeated letters.</string>
    <string name="game_setup_status_new_daily_no_specs">Today\'s Puzzle</string>
    <string name="game_setup_status_won_daily">You solved the Daily Puzzle! See you tomorrow</string>
    <string name="game_setup_status_lost_daily">See you tomorrow for a new Daily Puzzle</string>
    <string name="game_setup_status_loading_daily">Loading puzzle progress…</string>
    <string name="game_setup_status_feedback_by_letter">feedback by letter</string>
    <string name="game_setup_status_feedback_aggregated">exact and included counts</string>
    <string name="game_setup_status_feedback_aggregated_exact">exact match count</string>
    <string name="game_setup_status_feedback_aggregated_included">number of letters included</string>
    <string name="game_setup_status_ongoing_seeded">Resume this puzzle</string>
    <string name="game_setup_status_new_seeded">Start a new puzzle from this seed</string>
    <string name="game_setup_status_won_seeded">You solved this puzzle! Try a different seed</string>
    <string name="game_setup_status_lost_seeded">You were stumped by this puzzle. Try a different seed</string>
    <string name="game_setup_status_loading_seeded">Loading puzzle progress…</string>
    <string name="game_setup_note_seed_legacy">This is a legacy seed; not all settings may be available</string>
    <string name="game_setup_note_seed_retired">This is a retired seed; the puzzle may not match expectations</string>
    <string name="game_setup_note_seed_futuristic">An app update is required to play this puzzle</string>
    <string name="game_setup_note_seed_undetermined">Checking puzzle availability…</string>
    <string name="game_setup_note_seed_local_daily">This seed is a Daily puzzle. If you play it now, that Daily may not be available later.</string>
    <string name="game_setup_note_game_expired">This game has expired</string>
    <string name="game_setup_note_game_forthcoming">This game is forthcoming</string>
    <string name="game_setup_note_game_local_daily">This Daily puzzle is just for you; enable update checks (in Settings) to play the global Daily</string>
    <string name="game_setup_qualifier_version_pending_seeded">Checking for updates…</string>
    <string name="game_setup_qualifier_version_failed_seeded">No connection; couldn\'t check current version</string>
    <string name="game_setup_qualifier_version_update_available_seeded">An update is available; it may introduce new puzzles or features</string>
    <string name="game_setup_qualifier_version_update_recommended_seeded">An update is urgent to support new seeds</string>
    <string name="game_setup_qualifier_version_update_required_seeded">An update is required</string>
    <string name="game_setup_qualifier_version_pending_daily">Checking for updates…</string>
    <string name="game_setup_qualifier_version_failed_daily">No connection; couldn\'t check current Daily</string>
    <string name="game_setup_qualifier_version_update_available_daily">An update is available; install soon to keep playing the Daily puzzle</string>
    <string name="game_setup_qualifier_version_update_recommended_daily">Update Code Word soon to keep playing the Daily puzzle</string>
    <string name="game_setup_qualifier_version_update_required_daily">Update Code Word to play the Daily puzzle</string>
    <string name="game_setup_player_role_prompt">Player Role:</string>
    <string name="game_setup_player_role_value_solver">Guess</string>
    <string name="game_setup_player_role_value_evaluator">Know</string>
    <string name="game_setup_player_role_value_none">Spectate</string>
    <string name="game_setup_player_role_value_both">Practice</string>
    <string-array name="game_setup_player_role_values">
        <item>@string/game_setup_player_role_value_solver</item>
        <item>@string/game_setup_player_role_value_evaluator</item>
        <item>@string/game_setup_player_role_value_none</item>
        <item>@string/game_setup_player_role_value_both</item>
    </string-array>
    <string name="game_setup_language_prompt">Secret:</string>
    <string name="game_setup_language_english">@string/template_english_secret</string>
    <string name="game_setup_language_code">@string/template_code_secret</string>
    <string-array name="game_setup_language_values">
        <item>@string/game_setup_language_english</item>
        <item>@string/game_setup_language_code</item>
    </string-array>
    <string name="game_setup_feedback_prompt">Feedback:</string>
    <string name="game_setup_feedback_perfect">By Letter</string>
    <string name="game_setup_feedback_aggregated_counts">Exact &amp; Included</string>
    <string name="game_setup_feedback_included_counts">Included Count</string>
    <string name="game_setup_feedback_exacts_counts">Exact Count</string>
    <string-array name="game_setup_feedback_values">
        <item>@string/game_setup_feedback_perfect</item>
        <item>@string/game_setup_feedback_aggregated_counts</item>
        <item>@string/game_setup_feedback_included_counts</item>
        <item>@string/game_setup_feedback_exacts_counts</item>
    </string-array>
    <string name="game_setup_code_length_prompt">Length: %1$d</string>
    <string name="game_setup_code_characters_prompt">Symbols: %1$d</string>
    <string name="game_setup_hard_mode_prompt">Hard mode</string>
    <string name="game_setup_hard_mode_description">Each guess must use all previous hints</string>
    <string name="game_setup_code_character_repetitions_prompt">Repeat letters</string>
    <string name="game_setup_code_character_repetitions_hint">Letters may occur more than once</string>
    <string name="game_setup_evaluator_cheats_prompt">Bad luck!</string>
    <string name="game_setup_evaluator_cheats_hint">Guesses tend to be wrong</string>
    <string name="game_setup_limited_rounds_prompt">Limited guesses</string>
    <string name="game_setup_rounds_prompt">Guesses: %1$d</string>
    <string name="game_info_title">Puzzle Info</string>
    <string name="game_info_section_puzzle">Puzzle Type</string>
    <string name="game_info_section_outcome">Outcome</string>
    <string name="game_info_section_history">History</string>
    <string name="game_info_section_dailies">Dailies</string>
    <string name="game_info_section_performance">Performance</string>
    <string name="game_info_section_difficulty">Difficulty</string>
    <string name="genie_set_version_daily_prompt">Daily</string>
    <string name="genie_set_version_seed_prompt">Seed</string>
    <string name="genie_set_version_delay_prompt">Delay</string>
    <string name="genie_set_version_delay_hint">Seconds</string>
</resources>